added new dataset

--- a/main_page.css
+++ b/main_page.css
@@ -1,3 +1,9 @@
-#reviews_mean{
+table {
+    border-collapse: collapse;
+}
 
+table, th, td {
+    border: 1px solid black;
+    padding: 15px;
+    text-align: left;
 }
