--- a/main_page.css
+++ b/main_page.css
@@ -1,9 +1,39 @@
-table {
-    border-collapse: collapse;
-}
-
+#csv tr:nth-child(even) {background: WhiteSmoke}
+#csv tr:nth-child(odd) {background: #FFF}
 table, th, td {
-    border: 1px solid black;
+
     padding: 15px;
-    text-align: left;
+    text-align: center;
+    table-layout: auto;
+    margin: auto;
+    position: relative;
+
+
+}
+tr{
+    padding: 10px 0 10px 0;
+}
+table { border-radius: 6px;
+    border: 2px solid whitesmoke;
+    padding-left:0;
+    padding-right: 0;
+    }
+body{
+    margin:0 !important;
+    font-family: 'Roboto', sans-serif;
+}
+header {
+    box-shadow: -1px 2px 9px -5px rgba(0,0,0,0.71);
+    background: #365769;
+    padding: 1px;
+    text-align: center;
+    position: sticky;
+    height: 52px;
+    color: #fff;
+    z-index: 1;
+    top:0;
+}
+h1.title {
+    text-align: center;
+    margin: .3%;
 }
