--- a/main_page.css
+++ b/main_page.css
@@ -8,7 +8,6 @@ table, th, td {
     margin: auto;
     position: relative;
 
-
 }
 tr{
     padding: 10px 0 10px 0;
@@ -21,6 +20,15 @@ table { border-radius: 6px;
 body{
     margin:0 !important;
     font-family: 'Roboto', sans-serif;
+    background-color: whitesmoke;
+
+}
+
+.front-page{
+    background-color: white;
+    margin: auto;
+    padding: 10px;
+    margin: 30px 10px 30px 10px;
 }
 header {
     box-shadow: -1px 2px 9px -5px rgba(0,0,0,0.71);
