--- a/first_page/main_page.css
+++ b/first_page/main_page.css
@@ -1,7 +1,6 @@
 #csv tr:nth-child(even) {background: WhiteSmoke}
 #csv tr:nth-child(odd) {background: #FFF}
 table, th, td {
-
     padding: 15px;
     text-align: center;
     table-layout: auto;
@@ -9,14 +8,32 @@ table, th, td {
     position: relative;
 
 }
-tr{
-    padding: 10px 0 10px 0;
-}
-table { border-radius: 6px;
+
+table {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    border-radius: 6px;
     border: 2px solid whitesmoke;
     padding-left:0;
     padding-right: 0;
-    }
+    width: 70%;
+}
+tr{
+    padding: 10px 0 10px 0;
+}
+
+input{
+    padding: 4px;
+    border-radius: 3px;
+    background-color: white;
+    text-align: center;
+    width: 3%;
+    margin-left: 3px;
+    border-width: 1px;
+    border-style:solid;
+    border-color: lightgray;
+}
+
 body{
     margin:0 !important;
     font-family: 'Roboto', sans-serif;
@@ -25,39 +42,45 @@ body{
 }
 
 .front-page{
+    object-fit: fill;
     background-color: white;
-    margin: auto;
     padding: 10px;
     margin: 30px 10px 30px 10px;
+    position: relative;
 }
 header {
     box-shadow: -1px 2px 9px -5px rgba(0,0,0,0.71);
     background: #365769;
-    padding: 1px;
+    padding: 2px 1px 2px 1px;
     text-align: center;
     position: sticky;
-    height: 52px;
+    height: 40px;
     color: #fff;
     z-index: 1;
     top:0;
+    text-justify: distribute;
+
 }
 
-h3{
-    color: #365769;
-    font-family:"Liberation Sans";
+header h1{
+    text-align: center;
+    text-transform: capitalize;
+    margin-top: 0;
+
 }
 
-h2{
-    color: darkred;
-    font-family:"Liberation Sans";
+.boxp{
+    height: 60%;
+    width: 100% !important;
 }
-
  .image{
-     display: block;
-     margin-left: auto;
-     margin-right: auto;
+     margin: 0 auto;
+     flex-direction: row;
      width: 40%;
+     overflow: auto;
  }
+
+
  .text{
      padding-left: 5px;
  }
