added jupyter notebook

--- a/style/stylePage.css
+++ b/style/stylePage.css
@@ -50,7 +50,7 @@ body{
     border-radius: 3px;
 }
 .next-page-button{
-    background-color: #6897b1; /* Green */
+    background-color: #6897b1;
     border: solid;
     border-radius: 9px;
     color: white;
